qtimageformats-opensource-src (5.4.0-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Drop fix_libmng_test.patch, applied upstream.
  * Build-depend on qtbase 5.4.0.
  * Update debian/copyright.
  * Update Vcs-Browser field to point to cgit interface.
  * Bump Standards-Version to 3.9.6, no changes needed.
  * Add myself to Uploaders.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 23 Dec 2014 18:25:37 +0300

qtimageformats-opensource-src (5.3.2-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 22 Sep 2014 00:15:57 -0300

qtimageformats-opensource-src (5.3.2-1) experimental; urgency=medium

  * New upstream release.
    - Removes undistributable files (Closes: #760172).
  * Bump Qt build dependencies.
  * Create fix_libmng_test.patch in order to use the system libmng.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 16 Sep 2014 15:53:34 -0300

qtimageformats-opensource-src (5.3.1-1) unstable; urgency=medium

  * New upstream release.
  * Bump Qt build dependencies.
  * Remove make_qwebphandler_write_work_on_big_endian_systems.patch,
    applied upstream.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 29 Jun 2014 16:40:13 -0300

qtimageformats-opensource-src (5.3.0-4) unstable; urgency=medium

  * Disable tests until we finish the transition. Now we seem to have problem
    with libwebp on armel.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 07 Jun 2014 09:04:02 -0300

qtimageformats-opensource-src (5.3.0-3) unstable; urgency=medium

  * Upload to unstable.
  * Backport Dmitry Shachnev's
    make_qwebphandler_write_work_on_big_endian_systems.patch to properly handle
    big endian machines.
  * Build depend upon libwebp >= 0.4.0-4.1~ to solve endianness bug that
    caused a FTBFS in s390x.
